// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders collectly with children 1`] = `
<div
  className="jsx-4096959289 page"
>
  <title
    className="jsx-4096959289"
  >
    サンプルブログ
  </title>
  <link
    className="jsx-4096959289"
    href="/favicon.ico"
    rel="icon"
  />
  <header
    className="jsx-4096959289"
  >
    <h1
      className="jsx-4096959289 site-title"
    >
      <a
        href="/"
        style={
          Object {
            "color": "inherit",
            "textDecoration": "none",
          }
        }
      >
        <span
          className="jsx-4096959289 site-title-text"
        >
          サンプルブログ
        </span>
      </a>
    </h1>
  </header>
  <main
    className="jsx-4096959289"
  >
    <div
      className="jsx-4096959289 page-main"
    >
      <div>
        <span>
          Hello World
        </span>
      </div>
    </div>
  </main>
  <footer
    className="jsx-4096959289"
  >
    © 
    サンプルブログ
  </footer>
</div>
`;

exports[`Layout renders collectly with title 1`] = `
<div
  className="jsx-4096959289 page"
>
  <title
    className="jsx-4096959289"
  >
    ページタイトル | サンプルブログ
  </title>
  <link
    className="jsx-4096959289"
    href="/favicon.ico"
    rel="icon"
  />
  <header
    className="jsx-4096959289"
  >
    <h1
      className="jsx-4096959289 site-title"
    >
      <a
        href="/"
        style={
          Object {
            "color": "inherit",
            "textDecoration": "none",
          }
        }
      >
        <span
          className="jsx-4096959289 site-title-text"
        >
          サンプルブログ
        </span>
      </a>
    </h1>
  </header>
  <main
    className="jsx-4096959289"
  >
    <h1
      className="jsx-4096959289 page-title"
    >
      ページタイトル
    </h1>
    <div
      className="jsx-4096959289 page-main"
    />
  </main>
  <footer
    className="jsx-4096959289"
  >
    © 
    サンプルブログ
  </footer>
</div>
`;
